# api.yml
@@ -59,11 +59,39 @@ paths:
               schema:
                 $ref: '#/components/schemas/GetUserResponse'
         '404':
-          description: User not found
+          description: User not exist
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/GetUserResponse'
+    patch:
+      operationId: updateUser
+      requestBody:
+        description: Update user payload
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateUserRequest'
+      responses:
+        '200':
+          description: The user being updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UpdateUserResponse'
+        '404':
+          description: User not exist
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UpdateUserResponse'
+        '409':
+          description: Phone number already in use
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UpdateUserResponse'
 components:
   schemas:
     RegistrationRequest:
@@ -85,7 +113,7 @@ components:
           type: string
           description: Must be at minimum 10 characters and maximum 13 characters
           x-oapi-codegen-extra-tags:
-            validate: required,min=10,max=13
+            validate: required,numeric,min=10,max=13
         password:
           type: string
           description: Must be minimum 6 characters and maximum 64 characters, containing at least 1 capital characters AND 1 number AND 1 special (non alphanumeric) characters
@@ -124,3 +152,42 @@ components:
               type: string
         errors:
           type: array
+    UpdateUserRequest:
+      type: object
+      required: [ fullName, countryCode, phoneNumber ]
+      properties:
+        fullName:
+          type: string
+          description: Must be at minimum 3 characters and maximum 60 characters
+          x-oapi-codegen-extra-tags:
+            validate: omitempty,min=3,max=60
+        countryCode:
+          type: string
+          description: Phone country code
+          example: '+62'
+          x-oapi-codegen-extra-tags:
+            validate: omitempty,min=3,max=7
+        phoneNumber:
+          type: string
+          description: Must be at minimum 10 characters and maximum 13 characters
+          x-oapi-codegen-extra-tags:
+            validate: omitempty,required_with=CountryCode,numeric,min=10,max=13
+    UpdateUserResponse:
+      type: object
+      required: [code, data, errors]
+      properties:
+        code:
+          type: string
+        data:
+          type: object
+          properties:
+            id:
+              type: integer
+              format: int64
+            fullName:
+              type: string
+            phoneNumber:
+              type: string
+        errors:
+          type: array
+
